--- a/初學量子1.html
+++ b/初學量子1.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<!-- <a href="index.html" class="logo"><strong>Quantum</strong> <span>詼諧_GreyShoes Q</span></a> -->
+						<!-- <a href="index.html" class="logo"><strong>Quantum1</strong> <span>詼諧_GreyShoes Q</span></a> -->
 						<a class="logo" id="logo"><strong>Quantum</strong> <span>詼諧_GreyShoes Q</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
