--- a/初學量子1.html
+++ b/初學量子1.html
@@ -306,7 +306,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>聯絡我 | Email</h3>
-										<a href="#">greyshoes29@gmail.com</a>
+										<a href="#">greyshoesq@gmail.com</a>
 									</div>
 								</section>
 								<!-- <section>
