--- a/初學量子1.html
+++ b/初學量子1.html
@@ -408,7 +408,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="../html5up-forty/blog/第一篇/picture/bookpicture.js"></script>
+			<script src="blog/第一篇/picture/bookpicture.js"></script>
 			<script src="assets/js/message.js"></script>
 
 
