--- a/初學量子1.html
+++ b/初學量子1.html
@@ -87,7 +87,7 @@
 									<br/>
 									
 									<p><strong>1.量子物理史話:上帝擲骰子嗎？</strong></p>
-									<img src="blog/第一篇/picture/8716209_R.jpg" id="shaizi" alt=""  height="400px"/>
+									<span class="image main"><img src="blog/第一篇/picture/8716209_R.jpg" id="shaizi" alt=""  width="400px"/></span>
 									<br/>
 									<br/>
 									<p>愛因斯坦:「上帝不擲骰子!」</p>
@@ -98,7 +98,7 @@
 									<br/>
 									<br/>
 									<p><strong>2.量子電腦與量子計算:IBM Q Experience實作</strong></p>
-									<img src="blog/第一篇/picture/getImage.jpg" id="shizuo" alt=""  height="400px"/>
+									<span class="image main"><img src="blog/第一篇/picture/getImage.jpg" id="shizuo" alt=""  height="400px"/><span class="image main"></span>
 									<br/>
 									<br/>
 									<p>如果說剛剛介紹的那本書讓你的雙脚走進了量子的領域，那麽這一本相當於在你猶豫不決的背後推了你一把。</p>
@@ -113,7 +113,7 @@
 									<br/>
 
 									<p><strong>3.Quantum Computation and Quantum Information</strong></p>
-									<img src="blog/第一篇/picture/R.jpg" id="qc" alt=""  height="400px"/>
+									<span class="image main"><img src="blog/第一篇/picture/R.jpg" id="qc" alt=""  height="400px"/><span class="image main"></span>
 									<br/>
 									<br/>
 									<p>量子計算與量子信息( Quantum Computation and Quantum Information )被稱爲<strong>量子界的聖經</strong>，它甚至被貶評爲是<u>假設讀者完全不了解量子力學的概念</u>。</p>
