--- a/初學量子1.html
+++ b/初學量子1.html
@@ -53,7 +53,7 @@
 										<h1 style="width: device-width">量子有這麽難？ 7個方法告訴你如何入門量子科技</h1>
 									</header>
 
-									<span class="image main"><img src="blog/第一篇/picture/pexels-negative-space-169573.jpg" alt="" /></span>
+									<span class="image main"><img src="blog/第一篇/picture/title.png" alt="" /></span>
 									
 									<h2>爲什麽要學量子科技（Quantum Technology）</h2>
 									<br/>
@@ -87,7 +87,7 @@
 									<br/>
 									
 									<p><strong>1.量子物理史話:上帝擲骰子嗎？</strong></p>
-									<span class="image main"><img src="blog/第一篇/picture/8716209_R.jpg" id="shaizi" alt=""  width="400px"/></span>
+									<img src="blog/第一篇/picture/8716209_R.jpg" id="shaizi" alt=""  height="400px"/>
 									<br/>
 									<br/>
 									<p>愛因斯坦:「上帝不擲骰子!」</p>
@@ -98,7 +98,7 @@
 									<br/>
 									<br/>
 									<p><strong>2.量子電腦與量子計算:IBM Q Experience實作</strong></p>
-									<span class="image main"><img src="blog/第一篇/picture/getImage.jpg" id="shizuo" alt=""  height="400px"/><span class="image main"></span>
+									<img src="blog/第一篇/picture/getImage.jpg" id="shizuo" alt=""  height="400px"/>
 									<br/>
 									<br/>
 									<p>如果說剛剛介紹的那本書讓你的雙脚走進了量子的領域，那麽這一本相當於在你猶豫不決的背後推了你一把。</p>
@@ -113,7 +113,7 @@
 									<br/>
 
 									<p><strong>3.Quantum Computation and Quantum Information</strong></p>
-									<span class="image main"><img src="blog/第一篇/picture/R.jpg" id="qc" alt=""  height="400px"/><span class="image main"></span>
+									<img src="blog/第一篇/picture/R.jpg" id="qc" alt=""  height="400px"/>
 									<br/>
 									<br/>
 									<p>量子計算與量子信息( Quantum Computation and Quantum Information )被稱爲<strong>量子界的聖經</strong>，它甚至被貶評爲是<u>假設讀者完全不了解量子力學的概念</u>。</p>
@@ -292,6 +292,9 @@
 							</section> -->
 							<section>
 								<div class="fields-half">
+									<img src="blog/picture/myicon_name_messageboard.png" width="600px" style="position: relative; right: 35px; bottom: 30px;"/>
+									<br/>
+									<br/>
 									<div id="list">
 
 									<!-- 留言内容 -->
@@ -386,7 +389,7 @@
 								<li><a href="https://www.linkedin.com/in/%E8%A9%BC%E8%AB%A7-greyshoes-q-bab667230/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; greyshoesq.com</li><li>詼諧_GreyShoes Q</li>
+								<li>&copy; 詼諧_GreyShoes Q</li><li>https://greyshoesq.com</li>
 							</ul>
 						</div>
 					</footer>
