--- a/初學量子1.html
+++ b/初學量子1.html
@@ -292,7 +292,7 @@
 							</section> -->
 							<section>
 								<div class="fields-half">
-									<img src="blog/picture/myicon_name_messageboard.png" width="600px" style="position: relative; right: 35px; bottom: 30px;"/>
+									<img src="blog/picture/myicon_name_messageboard.png" width="550px" style="position: relative; bottom: 30px;"/>
 									<br/>
 									<br/>
 									<div id="list">
