--- a/初學量子1.html
+++ b/初學量子1.html
@@ -50,7 +50,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<p style="font-size: 1em;">量子有這麽難？</p>
+										<p style="font-size: 1em;">【初學量子1】量子有這麽難？</p>
 										<h1>7個方法告訴你如何入門量子科技</h1>
 									</header>
 
