--- a/初學量子1.html
+++ b/初學量子1.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+	<div class="br1">
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -68,12 +68,12 @@
 									<br/>
 								<div>
 									<img src="blog/picture/fang_grey.png" width="5px" style="float: left; margin-right: 10px; margin-top: 4px;"/>
-									<p><strong>我們與被使用的科技脫節了</strong></p>
+									<h4>我們與被使用的科技脫節了</h4>
 								</div>
 									<br/>
 									<p><u>如果量子電腦哪天成真，今天的電腦可能就變成算盤!</u>這句話是國立自然科學博物館孫維新館長在演講中形容將來量子電腦的崛起與霸權。</p>
 									<br/>
-									<p><strong>量子不是一個騙局，也不是一種噱頭，更不只是一股潮流；量子是未來科技結構中不可或缺的一塊基石。</strong></p>
+									<h4>量子不是一個騙局，也不是一種噱頭，更不只是一股潮流；量子是未來科技結構中不可或缺的一塊基石。</h4>
 									<br/>
 									<p>你準備為未來鋪上一條路了嗎？以下介紹的7種極具實質效益的方法，即使沒有技術背景也能夠簡單入手，希望可以幫助到你!</p>
 									<br/>
@@ -121,8 +121,8 @@
 									<br/>
 									<p>但也因爲這樣，如果不排斥英文書籍的話還是建議閲讀看看這本書，除了盡量不使用專有名詞外，幾乎你想得到的問題在每章當中都會得到完善的解答，這對剛剛起步的初學者來説是非常重要的。</p>
 									<br/>
-									<br/>
 									<a href="Quantum_essay/Quantum Computation and Quantum Information.pdf">量子計算與量子信息-電子書[pdf]</a>
+									<br/>
 									<br/>
 									<br/>
 									<br/>
@@ -415,7 +415,7 @@
 			<script src="blog/第一篇/picture/bookpicture.js"></script>
 			<script src="assets/js/message.js"></script>
 
-
+	</div>
 	</body>
 </html>
 
