--- a/初學量子1.html
+++ b/初學量子1.html
@@ -71,7 +71,7 @@
 									<h4>我們與被使用的科技脫節了</h4>
 								</div>
 									<br/>
-									<p><u>如果量子電腦哪天成真，今天的電腦可能就變成算盤!</u>這句話是國立自然科學博物館孫維新館長在演講中形容將來量子電腦的崛起與霸權。</p>
+									<p><u>如果量子電腦（Quantum Computer）哪天成真，今天的電腦可能就變成算盤!</u>這句話是國立自然科學博物館孫維新館長在演講中形容將來量子電腦的崛起與霸權。</p>
 									<br/>
 									<h4>量子不是一個騙局，也不是一種噱頭，更不只是一股潮流；量子是未來科技結構中不可或缺的一塊基石。</h4>
 									<br/>
@@ -95,7 +95,7 @@
 									<p>波耳:「別告訴上帝該怎麽做!」</p>
 									<p>霍金:「上帝不但擲骰子，他還把骰子擲到我們看不見的地方去!」</p>
 									<br/>
-									<p>這本書以生動筆觸描寫多位科學家的在研究過程中發生的小故事以及在著名的<strong>波耳-愛因斯坦之爭</strong>當中，激烈的論戰仿佛武俠高手的對決，讓你在看戲的過程中，悄悄的踏入了量子世界的大門。</p>
+									<p>這本書以生動筆觸描寫多位科學家的在研究過程中發生的小故事以及在著名的<strong>波耳-愛因斯坦之爭（Bohr–Einstein debates）</strong>當中，激烈的論戰仿佛武俠高手的對決，讓你在看戲的過程中，悄悄的踏入了量子世界的大門。</p>
 									<br/>
 									<br/>
 									<h3>2.量子電腦與量子計算:IBM Q Experience實作</h3>
@@ -106,7 +106,7 @@
 									<br/>
 									<p>在介紹完基本的發展史後，本書有相當大的篇幅在講解於<strong>IBM Q官網</strong>上操作的電路圖和程式，以最簡單的方式帶領你走入更深的專業。</p>
 									<br/>
-									<p>其中讓我感覺收穫最多的是量子演算法的部分，詳盡的内容讓人即使沒有任何的程式背景，只要重新思考幾遍，還是容易理解的，是一本真的零門檻的入門書。</p>
+									<p>其中讓我感覺收穫最多的是量子演算法（Quantum Algorithm）的部分，詳盡的内容讓人即使沒有任何的程式背景，只要重新思考幾遍，還是容易理解的，是一本真的零門檻的入門書。</p>
 									<br/>
 									<a href="Quantum_essay/量子電腦與量子計算｜IBM Q Experience實作(電子書含目錄) .pdf">量子電腦與量子計算-電子書[pdf]</a>
 									<br/>
@@ -126,7 +126,7 @@
 									<br/>
 									<br/>
 									<br/>
-									<p>當然，除了以上推薦的3本之外，還有其他相當好或者更進階的適合不同的人，像是:<u>量子電腦程式設計</u>和<u>量子計算實戰</u>等書（中英版都有），以下附上中文版電子書pdf檔。</p>
+									<p>當然，除了以上推薦給初學者的3本入門書之外，還有其他相當好的以及更進階的適合不同需求的人，像是:<u>量子電腦程式設計</u>和<u>量子計算實戰</u>等書（中英版都有），以下附上中文版電子書pdf檔。</p>
 									<br/>
 									<a href="Quantum_essay/dokumen.pub_programming-quantum-computers-essential-algorithms-and-code-samples-1nbsped-1492039683-978-1492039686-u-5306881.pdf">量子電腦程式設計-電子書[pdf]</a>
 									<br/>
