--- a/初學量子1.html
+++ b/初學量子1.html
@@ -416,6 +416,15 @@
 			<script src="assets/js/message.js"></script>
 
 	</div>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YY7PM69MT7"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+
+  	gtag('config', 'G-YY7PM69MT7');
+	</script>
 	</body>
 </html>
 
