--- a/QuantumBeginnerFirst.html
+++ b/QuantumBeginnerFirst.html
@@ -54,7 +54,7 @@
 										<h1>7個方法告訴你如何入門量子科技</h1>
 									</header>
 
-									<span class="image main"><img src="blog/第一篇/picture/title.png" alt="" /></span>
+									<span class="image main"><img src="blog/第一篇/picture/title.png" alt="初學者入門量子科技教學" /></span>
 									
 									<h2>爲什麽要學量子科技（Quantum Technology）</h2>
 									<br/>
@@ -88,7 +88,7 @@
 									<br/>
 									
 									<h3>1.量子物理史話:上帝擲骰子嗎？</h3>
-									<img src="blog/第一篇/picture/8716209_R.jpg" id="shaizi" alt=""  height="400px"/>
+									<img src="blog/第一篇/picture/8716209_R.jpg" id="shaizi" alt="量子物理史話:上帝擲骰子嗎？"  height="400px"/>
 									<br/>
 									<br/>
 									<p>愛因斯坦:「上帝不擲骰子!」</p>
@@ -99,7 +99,7 @@
 									<br/>
 									<br/>
 									<h3>2.量子電腦與量子計算:IBM Q Experience實作</h3>
-									<img src="blog/第一篇/picture/getImage.jpg" id="shizuo" alt=""  height="400px"/>
+									<img src="blog/第一篇/picture/getImage.jpg" id="shizuo" alt="量子電腦與量子計算:IBM Q Experience實作"  height="400px"/>
 									<br/>
 									<br/>
 									<p>如果說剛剛介紹的那本書讓你的雙脚走進了量子的領域，那麽這一本相當於在你猶豫不決的背後推了你一把。</p>
@@ -114,7 +114,7 @@
 									<br/>
 
 									<h3>3.Quantum Computation and Quantum Information</h3>
-									<img src="blog/第一篇/picture/R.jpg" id="qc" alt=""  height="400px"/>
+									<img src="blog/第一篇/picture/R.jpg" id="qc" alt="量子計算與量子信息 Quantum-Computation-and-Quantum-Information"  height="400px"/>
 									<br/>
 									<br/>
 									<p>量子計算與量子信息( Quantum Computation and Quantum Information )被稱爲<strong>量子界的聖經</strong>，它甚至被貶評爲是<u>假設讀者完全不了解量子力學的概念</u>。</p>
@@ -140,7 +140,7 @@
 									<img src="blog/picture/fang.png" width="10px" style="float: left; margin-right: 10px;"/>
 									<h2>Qiskit textbook教程，讓你加入專業競爭</h2>
 								</div>
-									<span class="image main"><img src="blog/第一篇/picture/circuit_composer.png" alt="" /></span>
+									<span class="image main"><img src="blog/第一篇/picture/circuit_composer.png" alt="量子傅立葉轉換電路作曲家Qiskit-quantum-fourier-transform-circuit-composer" /></span>
 									<br/>
 									<p><u>Qiskit是一個開源軟體開發工具包(SDK)</u>，提供使用者創建與操作量子編程的機會，並協助研發能在IBM量子體驗平台上的原型量子設備。</p>
 									<br/>
@@ -293,7 +293,7 @@
 							</section> -->
 							<section>
 								<div class="fields-half">
-									<img src="blog/picture/myicon_name_messageboard.png" width="550px" style="position: relative; bottom: 30px;"/>
+									<img src="blog/picture/myicon_name_messageboard.png" alt="詼諧_GreyShoes-Q留言板" width="550px" style="position: relative; bottom: 30px;"/>
 									<br/>
 									<br/>
 									<div id="list">
