--- a/QuantumBeginnerFirst.html
+++ b/QuantumBeginnerFirst.html
@@ -73,6 +73,10 @@
 									<br/>
 									<p><u>如果量子電腦(Quantum Computer)哪天成真,今天的電腦可能就變成算盤!</u>國立自然科學博物館孫維新館長在演講中形容將來量子電腦的崛起與霸權。</p>
 									<br/>
+									<p>事實上量子電腦最早於1969年被提出。 至今已超過50年，而能使用的量子位元僅有不到100個。但是IBM於2020年提出目標在2023年建置1000量子位元處理器，而Google在2021年更是宣示預計在八年後推出100萬量子位元商業化量子電腦。 </p>
+									<br/>
+									<p>如果在前50年來的發展為線性成長，那麽我認爲在接下來的10~20年間，量子科技將是一個專業且有潛力呈現指數型的爆發式躍升的一門學問，因此現在就是一個適合學習的時間。</p>
+									<br/>
 									<h4>量子不是一個騙局,也不是一種噱頭,更不只是一股潮流;量子是未來科技結構中不可或缺的一塊基石。</h4>
 									<br/>
 									<p>你準備為未來鋪上一條路了嗎?以下介紹的7種極具實質效益的方法,即使沒有技術背景也能夠簡單入手,希望可以幫助到你!</p>
@@ -182,6 +186,11 @@
 								<div>
 									<img src="blog/picture/fang.png" width="10px" style="float: left; margin-right: 10px;"/>
 									<h2>參加IBM 挑戰賽,擺脫量子小白</h2>
+								</div>
+									<span class="image main"><img src="blog/第一篇/picture/IBM-Quantum-Challenge-Fall-2021.png" alt="IBM-Quantum-Challenge-Fall-2021" /></span>
+								<div>
+									<img src="blog/picture/san.png" width="20px" style="float: left; margin-right: 10px; position: relative; top: 5px;"/>
+									<p>2021年10月參加線上的IBM Quantum量子秋季挑戰賽時的截圖，至挑戰結束共計1293位參與者且完成率為56%</p>
 								</div>
 									<br/>
 									<p>由IBM(國際商用機器公司)從2020年開始舉辦的<strong>量子挑戰賽(IBM Quantum Challenge)</strong>希望集合世界各地的量子愛好者。開放一段時間讓參賽者解決題目,當中可以上網查資料,也可以詢問別人,但是嚴禁直接公開程式代碼的答案。</p>
