landing & home update

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>哈囉！歡迎來到詼諧_GreyShoes的網站</h1>
+								<h1>詼諧_GreyShoes Q 量子學習網站</h1>
 							</header>
 							<div class="content">
 								<p>量子不是一個騙局，也不是一種噱頭，更不只是一股潮流<br />
 								量子是未來科技結構中不可或缺的一塊基石</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">想了解更多</a></li>
+									<li><a href="#one" class="button next scrolly">現在開始</a></li>
 								</ul>
 							</div>
 						</div>
@@ -66,7 +66,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">推薦書籍/文章</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>Recommended Books & Articles</p>
 									</header>
 								</article>
 								<article>
@@ -74,8 +74,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">初學量子</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="beginners.html" class="link">初學量子</a></h3>
+										<p>Beginners to Quantum</p>
 									</header>
 								</article>
 								<article>
@@ -84,7 +84,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">專題研究</a></h3>
-										<p>Lorem etiam nullam</p>
+										<p>Thematic Studies</p>
 									</header>
 								</article>
 								<article>
@@ -92,8 +92,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">IBM 量子挑戰賽</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">程式實作</a></h3>
+										<p>Procedural Implementation</p>
 									</header>
 								</article>
 								<article>
@@ -101,8 +101,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">相關社群</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">產業新知</a></h3>
+										<p>New knowledge of the industry</p>
 									</header>
 								</article>
 								<article>
@@ -110,8 +110,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">量子黑客松</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">活動</a></h3>
+										<p>Latest events</p>
 									</header>
 								</article>
 							</section>
@@ -120,11 +120,11 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>活動</h2>
+										<h2>關於詼諧_GreyShoes Q</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>ssssssssssssss</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="landing.html" class="button next">了解更多</a></li>
 									</ul>
 								</div>
 							</section>
@@ -132,7 +132,7 @@
 					</div>
 
 				<!-- Contact -->
-					<section id="contact">
+					<!-- <section id="contact">
 						<div class="inner">
 							<section>
 								<form method="post" action="#">
@@ -182,10 +182,10 @@
 								</section>
 							</section>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -200,7 +200,7 @@
 						</div>
 					</footer>
 
-			</div>
+			</div> -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
