--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					
+
+					<video autoplay loop muted style="position: absolute; top: -100px; left: 0;border: 0px;">
+						<source src="blog/picture/homewrapper.mp4">
+					</video>
+
+				</section>
 
 				<!-- Main -->
 					<div id="main">
