--- a/QuantumBeginnerFirst.html
+++ b/QuantumBeginnerFirst.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>【初學量子1】量子有這麽難?7個方法告訴你如何入門量子科技|詼諧_GreyShoes Q</title>
+		<title>【初學量子1】量子有這麽難?7個方法告訴你如何入門量子科技 | 詼諧_GreyShoes Q</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<!-- <a href="index.html" class="logo"><strong>Quantum1</strong> <span>詼諧_GreyShoes Q</span></a> -->
-						<a class="logo" id="logo"><strong>Quantum</strong> <span>詼諧_GreyShoes Q</span></a>
+						<a href="index.html" class="logo"><strong>Quantum</strong> <span>詼諧_GreyShoes Q</span></a>
+						<!-- <a class="logo" id="logo"><strong>Quantum</strong> <span>詼諧_GreyShoes Q</span></a> -->
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,19 +28,19 @@
 
 				<!-- Menu -->
 					<nav id="menu">
-						<span class="image main"><img src="blog/picture/notopen.png" alt="" width="800"/></span>
+						<!-- <span class="image main"><img src="blog/picture/notopen.png" alt="" width="800"/></span>
 						<hr/>
-						<p>將於之後推出更多功能,敬請期待</p>
-						<!-- <ul class="links">
+						<p>將於之後推出更多功能,敬請期待</p> -->
+						<ul class="links">
 							<li><a href="index.html">首頁</a></li>
-							<li><a href="landing.html">初學量子</a></li>
+							<li><a href="beginners.html">初學量子</a></li>
 							<li><a href="landing.html">下一篇</a></li>
 														
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">了解更多</a></li>
-							<li><a href="#" class="button fit">登入</a></li>
-						</ul> -->
+							<li><a href="introduction.html" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
+							<li><a href="#" class="button fit">登入/注冊</a></li>
+						</ul>
 					</nav>
 
 				<!-- Main -->
@@ -399,7 +399,7 @@
 								<li><a href="https://www.linkedin.com/in/%E8%A9%BC%E8%AB%A7-greyshoes-q-bab667230/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; 詼諧_GreyShoes Q</li><li>https://greyshoesq.com</li>
+								<li>&copy; 詼諧_GreyShoes Q</li><li>URL: <a href="https://greyshoesq.com"> https://greyshoesq.com</a></li>
 							</ul>
 						</div>
 					</footer>
