--- a/index.html
+++ b/index.html
@@ -28,14 +28,19 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<!-- <li><a href="index.html">首頁</a></li> -->
+							<li><a href="landing.html">推薦書籍/文章</a></li>
+							<li><a href="beginners.html">初學量子</a></li>
+							<li><a href="landing.html">專題研究&名詞介紹</a></li>
+							<li><a href="landing.html">程式實作</a></li>
+							<li><a href="landing.html">產業新知</a></li>
+							<li><a href="landing.html">活動</a></li>
+							<!-- <li><a href="generic.html">Generic</a></li> -->
+							<!-- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="introduction.html" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
+							<li><a href="#" class="button fit">登入/注冊</a></li>
 						</ul>
 					</nav>
 
@@ -55,7 +60,7 @@
 						</div>
 					
 
-					<video autoplay loop muted style="position: absolute; top: -100px; left: 0;border: 0px;">
+					<video autoplay loop muted style="position: absolute; top: -30px; left: 0; border: 0px; max-width: 100%;">
 						<source src="blog/picture/homewrapper.mp4">
 					</video>
 
@@ -72,7 +77,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">推薦書籍/文章</a></h3>
-										<p>Recommended Books & Articles</p>
+										<p>量子相關物理、數學和程式的書籍文章心得分享與推薦介紹</p>
 									</header>
 								</article>
 								<article>
@@ -81,7 +86,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="beginners.html" class="link">初學量子</a></h3>
-										<p>Beginners to Quantum</p>
+										<p>是想學卻又無從何下手的量子新手嗎？從0開始一系列完整介紹</p>
 									</header>
 								</article>
 								<article>
@@ -89,8 +94,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">專題研究</a></h3>
-										<p>Thematic Studies</p>
+										<h3><a href="landing.html" class="link">專題研究&名詞介紹</a></h3>
+										<p>對於更深入的主題以及觀念進行討論與研究</p>
 									</header>
 								</article>
 								<article>
@@ -99,7 +104,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">程式實作</a></h3>
-										<p>Procedural Implementation</p>
+										<p>使用Qiskit讓理念實際運用在雲端量子電腦</p>
 									</header>
 								</article>
 								<article>
@@ -108,7 +113,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">產業新知</a></h3>
-										<p>New knowledge of the industry</p>
+										<p>競爭激烈的時事各國量子科技發展</p>
 									</header>
 								</article>
 								<article>
@@ -117,7 +122,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">活動</a></h3>
-										<p>Latest events</p>
+										<p>講座、黑客松、量子挑戰賽等最新活動内容</p>
 									</header>
 								</article>
 							</section>
