--- a/beginners.html
+++ b/beginners.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landing - Forty by HTML5 UP</title>
+		<title>初學量子 | 詼諧_GreyShoes-Q</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,14 +29,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="QuantumBeginnerFirst.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="index.html">首頁</a></li>
+							<li><a href="QuantumBeginnerFirst.html">第一篇</a></li>
+							<li><a href="QuantumBeginnerFirst.html">Landing</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="introduction.html" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
+							<li><a href="#" class="button fit">登入/注冊</a></li>
 						</ul>
 					</nav>
 
@@ -51,8 +50,8 @@
 								<h1>初學量子</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>是想學卻又無從何下手的量子新手嗎<br/>
+								從0開始一系列完整介紹</p>
 							</div>
 						</div>
 					</section>
@@ -126,7 +125,7 @@
 							<section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>未來規劃</h2>
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
@@ -135,10 +134,27 @@
 								</div>
 							</section>
 
+							<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://twitter.com/GreyshoesQ" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+								<li><a href="https://www.instagram.com/greyshoesq/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/greyshoes-Q" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/%E8%A9%BC%E8%AB%A7-greyshoes-q-bab667230/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; 詼諧_GreyShoes Q</li><li>URL: <a href="https://greyshoesq.com"> https://greyshoesq.com</a></li>
+							</ul>
+							<img style="max-width: 500px; position: relative; left: 600px; bottom: 100px;" src="blog/picture/myicon_ name.png">
+						</div>
+					</footer>
+
 					</div>
 
 				<!-- Contact -->
-					<section id="contact">
+					<!-- <section id="contact">
 						<div class="inner">
 							<section>
 								<form method="post" action="#">
@@ -188,10 +204,10 @@
 								</section>
 							</section>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -204,7 +220,7 @@
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
