--- a/QuantumBeginnerFirst.html
+++ b/QuantumBeginnerFirst.html
@@ -39,7 +39,7 @@
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="introduction.html" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
-							<li><a href="#" class="button fit">登入/注冊</a></li>
+							<li><a href="#" class="button fit">獲取最新資訊</a></li>
 						</ul>
 					</nav>
 
