--- a/activity.html
+++ b/activity.html
@@ -31,7 +31,7 @@
 						<ul class="links">
 							<li><a href="index.html">首頁</a></li>
 							<li><a href="QuantumBeginnerFirst.html">第一篇</a></li>
-							<li><a href="">未來規劃</a></li>
+							<li><a href="QuantumBeginnerFirst.html">未來規劃</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="introduction.html" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
@@ -129,7 +129,7 @@
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
-										<li><a href="QuantumBeginnerFirst.html" class="button next">了解更多</a></li>
+										<li><a href="QuantumBeginnerFirst.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
 							</section>
