--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="introduction.html" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
-							<li><a href="#" class="button fit">登入/注冊</a></li>
+							<li><a href="#" class="button fit">獲取最新資訊</a></li>
 						</ul>
 					</nav>
 
@@ -73,16 +73,16 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="推薦書籍/文章" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">推薦書籍/文章</a></h3>
+										<h3><a href="paper.html" class="link">推薦書籍/文章</a></h3>
 										<p>量子相關物理、數學和程式的書籍文章心得分享與推薦介紹</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic02.jpg" alt="初學量子" />
 									</span>
 									<header class="major">
 										<h3><a href="beginners.html" class="link">初學量子</a></h3>
@@ -91,28 +91,28 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic03.jpg" alt="專題研究&名詞介紹" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">專題研究&名詞介紹</a></h3>
+										<h3><a href="advance.html" class="link">專題研究&名詞介紹</a></h3>
 										<p>對於更深入的主題以及觀念進行討論與研究</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic04.jpg" alt="程式實作" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">程式實作</a></h3>
+										<h3><a href="code.html" class="link">程式實作</a></h3>
 										<p>使用Qiskit讓理念實際運用在雲端量子電腦</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic05.jpg" alt="產業新知" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">產業新知</a></h3>
+										<h3><a href="news.html" class="link">產業新知</a></h3>
 										<p>競爭激烈的時事各國量子科技發展</p>
 									</header>
 								</article>
@@ -121,7 +121,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">活動</a></h3>
+										<h3><a href="activity.html" class="link">活動</a></h3>
 										<p>講座、黑客松、量子挑戰賽等最新活動内容</p>
 									</header>
 								</article>
@@ -135,7 +135,7 @@
 									</header>
 									<p>ssssssssssssss</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">了解更多</a></li>
+										<li><a href="introduction.html" class="button next">了解更多</a></li>
 									</ul>
 								</div>
 							</section>
