--- a/paper.html
+++ b/paper.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>初學量子 | 詼諧_GreyShoes-Q</title>
+		<title>推薦書籍/文章 | 詼諧_GreyShoes-Q</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,7 +31,7 @@
 						<ul class="links">
 							<li><a href="index.html">首頁</a></li>
 							<li><a href="QuantumBeginnerFirst.html">第一篇</a></li>
-							<li><a href="">未來規劃</a></li>
+							<li><a href="QuantumBeginnerFirst.html">未來規劃</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="introduction.html" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
@@ -47,11 +47,11 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>初學量子</h1>
+								<h1>推薦書籍/文章</h1>
 							</header>
 							<div class="content">
-								<p>是想學卻又無從何下手的量子新手嗎<br/>
-								從0開始一系列完整介紹</p>
+								<p>量子相關物理、數學和程式的書籍&文章<br/>
+								心得分享與推薦介紹</p>
 							</div>
 						</div>
 					</section>
