--- a/activity.html
+++ b/activity.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>初學量子 | 詼諧_GreyShoes-Q</title>
+		<title>活動 | 詼諧_GreyShoes-Q</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,11 +47,11 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>初學量子</h1>
+								<h1>活動</h1>
 							</header>
 							<div class="content">
-								<p>是想學卻又無從何下手的量子新手嗎<br/>
-								從0開始一系列完整介紹</p>
+								<p>講座、黑客松、量子挑戰賽等最新活動内容<br/>
+								發揮創意挑戰自己</p>
 							</div>
 						</div>
 					</section>
@@ -129,7 +129,7 @@
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
-										<li><a href="QuantumBeginnerFirst.html" class="button next">Get Started</a></li>
+										<li><a href="QuantumBeginnerFirst.html" class="button next">了解更多</a></li>
 									</ul>
 								</div>
 							</section>
@@ -147,7 +147,7 @@
 							<ul class="copyright">
 								<li>&copy; 詼諧_GreyShoes Q</li><li>URL: <a href="https://greyshoesq.com"> https://greyshoesq.com</a></li>
 							</ul>
-							<img style="max-width: 500px; position: relative; left: 600px; bottom: 100px;" src="blog/picture/myicon_ name.png">
+							<img style="max-width: 500px; position: relative; left: 600px; bottom: 100px;" src="blog/picture/myicon_ name.png" alt="詼諧_GreyShoes Q量子學習網站">
 						</div>
 					</footer>
 
