--- a/beginners.html
+++ b/beginners.html
@@ -30,7 +30,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">首頁</a></li>
-							<li><a href="QuantumBeginnerFirst.html">第一篇</a></li>
+							<li><a href="Beginners/First.html">第一篇</a></li>
 							<li><a href="">未來規劃</a></li>
 						</ul>
 						<ul class="actions stacked">
@@ -72,7 +72,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="QuantumBeginnerFirst.html" class="image">
+									<a href="Beginners/First.html" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -82,7 +82,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumBeginnerFirst.html" class="button">Learn more</a></li>
+												<li><a href="Beginners/First.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -147,7 +147,7 @@
 							<ul class="copyright">
 								<li>&copy; 詼諧_GreyShoes Q</li><li>URL: <a href="https://greyshoesq.com"> https://greyshoesq.com</a></li>
 							</ul>
-							<img style="max-width: 500px; position: relative; left: 600px; bottom: 100px;" src="blog/picture/myicon_ name.png">
+							<img style="max-width: 500px; position: relative; left: 600px; bottom: 100px;" src="blog/picture/myicon_ name.png" alt="詼諧_GreyShoes Q量子學習網站">
 						</div>
 					</footer>
 
