--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 									<header class="major">
 										<h2>關於詼諧_GreyShoes Q</h2>
 									</header>
-									<p>ssssssssssssss</p>
+									<p>待辦事項</p>
 									<ul class="actions">
 										<li><a href="introduction.html" class="button next">了解更多</a></li>
 									</ul>
