--- a/introduction.html
+++ b/introduction.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Forty by HTML5 UP</title>
+		<title>關於詼諧_GreyShoes Q 量子學習網站</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Quantum</strong> <span>詼諧_GreyShoes Q</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,14 +28,15 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="index.html">首頁</a></li>
+							<li><a href="https://twitter.com/GreyshoesQ">Twitter</a></li>
+							<li><a href="https://www.instagram.com/greyshoesq/">Instagram</a></li>
+							<li><a href="https://github.com/greyshoes-Q">GitHub</a></li>
+							<li><a href="https://www.linkedin.com/in/%E8%A9%BC%E8%AB%A7-greyshoes-q-bab667230/">LinkedIn</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="#" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
+							<li><a href="#" class="button fit">獲取最新資訊</a></li>
 						</ul>
 					</nav>
 
