--- a/introduction.html
+++ b/introduction.html
@@ -47,7 +47,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>關於詼諧_GreyShoes Q 量子學習網站</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
@@ -59,73 +59,91 @@
 					</div>
 
 				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
+				<section id="contact">
+					<div class="inner">
+						<!-- <section>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field">
+										<label for="name">名字</label>
+										<input type="text" name="name" id="name" />
+									</div>
+
+									<div class="field">
+										<label for="message">留言</label>
+										<textarea name="message" id="message" rows="8"></textarea>
+									</div>
+
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" class="primary" id="end"/></li>
+									<li><button id="send" class="primary">發布留言</button></li>
+									<li><input type="reset" value="Clear" /></li>
+								</ul>
+							</form>
+						</section> -->
+						<section>
+							<div class="fields-half">
+								<img src="blog/picture/myicon_name_messageboard.png" alt="詼諧_GreyShoes-Q留言板" width="400px" style="position: relative; bottom: 30px;"/>
+								<br/>
+								<br/>
+								<div id="list">
+
+								<!-- 留言内容 -->
+
+								</div>
+							</div>
+						</section>	
+
+
+						<section class="split">
+							<section>
+								<div class="contact-method">
+									<span class="icon solid alt fa-envelope"></span>
+									<h3>聯絡我 | Email</h3>
+									<a href="#">greyshoesq@gmail.com</a>
+								</div>
+							</section>
 							<section>
 								<form method="post" action="#">
 									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
 										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
+											<label for="nam">名字</label>
+											<input type="text" id="nam"/>
 										</div>
+
+										<div class="field">
+											<label for="message">留言</label>
+											<textarea id="message" rows="8"></textarea>
+										</div>	
+
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
 								</form>
+
+																	
+								<span><button id="btn"  class="primary">發布公開留言</button></span>
+								<span><input type="reset" value="Clear" /></span>
+
 							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
-						</div>
+						</section>
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="https://twitter.com/GreyshoesQ" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+							<li><a href="https://www.instagram.com/greyshoesq/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/greyshoes-Q" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/%E8%A9%BC%E8%AB%A7-greyshoes-q-bab667230/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; 詼諧_GreyShoes Q</li><li>URL: <a href="https://greyshoesq.com"> https://greyshoesq.com</a></li>
+						</ul>
+						<img style="max-width: 500px; position: relative; left: 600px; bottom: 100px;" src="blog/picture/myicon_ name.png" alt="詼諧_GreyShoes Q量子學習網站">
+					</div>
+				</footer>
 
 			</div>
 
