--- a/beginners/First.html
+++ b/beginners/First.html
@@ -30,7 +30,7 @@
 					<nav id="menu">
 						<!-- <span class="image main"><img src="blog/picture/notopen.png" alt="" width="800"/></span>
 						<hr/>
-						<p>將於之後推出更多功能,敬請期待</p> -->
+						<p>將於之後推出更多功能,敬請期待!</p> -->
 						<ul class="links">
 							<li><a href="../index.html">首頁</a></li>
 							<li><a href="../beginners.html">初學量子</a></li>
