--- a/code.html
+++ b/code.html
@@ -127,7 +127,7 @@
 									<header class="major">
 										<h2>未來規劃</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>待辦事項</p>
 									<ul class="actions">
 										<li><a href="QuantumBeginnerFirst.html" class="button next">了解更多</a></li>
 									</ul>
