--- a/beginners.html
+++ b/beginners.html
@@ -72,7 +72,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="Beginners/First.html" class="image">
+									<a href="beginners/First.html" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -82,13 +82,13 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="Beginners/First.html" class="button">Learn more</a></li>
+												<li><a href="beginners/First.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="QuantumBeginnerFirst.html" class="image">
+									<a href="QuantumbeginnerFirst.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -98,13 +98,13 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumBeginnerFirst.html" class="button">Learn more</a></li>
+												<li><a href="QuantumbeginnerFirst.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="QuantumBeginnerFirst.html" class="image">
+									<a href="QuantumbeginnerFirst.html" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -114,7 +114,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumBeginnerFirst.html" class="button">Learn more</a></li>
+												<li><a href="QuantumbeginnerFirst.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -129,7 +129,7 @@
 									</header>
 									<p>待辦事項</p>
 									<ul class="actions">
-										<li><a href="QuantumBeginnerFirst.html" class="button next">了解更多</a></li>
+										<li><a href="QuantumbeginnerFirst.html" class="button next">了解更多</a></li>
 									</ul>
 								</div>
 							</section>
