--- a/beginners.html
+++ b/beginners.html
@@ -63,9 +63,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>作者想説</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p>待辦事項</p>
 								</div>
 							</section>
 
@@ -78,11 +78,12 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h4 style="font-size: 0.9em;">【初學量子1】量子有這麽難?</h4>
+												<h3>7個方法告訴你如何入門量子科技</h3>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="beginners/First.html" class="button">Learn more</a></li>
+												<li><a href="beginners/First.html" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
@@ -98,7 +99,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumbeginnerFirst.html" class="button">Learn more</a></li>
+												<li><a href="QuantumbeginnerFirst.html" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
@@ -114,7 +115,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumbeginnerFirst.html" class="button">Learn more</a></li>
+												<li><a href="QuantumbeginnerFirst.html" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
