--- a/beginners/First.html
+++ b/beginners/First.html
@@ -50,7 +50,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<p style="font-size: 1em;">【初學量子1】量子有這麽難?</p>
+										<h4 style="font-size: 1em;">【初學量子1】量子有這麽難?</h4>
 										<h1>7個方法告訴你如何入門量子科技</h1>
 									</header>
 
