--- a/beginners.html
+++ b/beginners.html
@@ -88,7 +88,7 @@
 										</div>
 									</div>
 								</section>
-								<!-- <section>
+								<section>
 									<a href="QuantumbeginnerFirst.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
@@ -119,7 +119,7 @@
 											</ul>
 										</div>
 									</div>
-								</section> -->
+								</section>
 							</section>
 
 						<!-- Three -->
