--- a/beginners.html
+++ b/beginners.html
@@ -89,7 +89,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="QuantumbeginnerFirst.html" class="image">
+									<a href="#" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -99,13 +99,13 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumbeginnerFirst.html" class="button">閲讀更多</a></li>
+												<li><a href="#" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="QuantumbeginnerFirst.html" class="image">
+									<a href="#" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -115,7 +115,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumbeginnerFirst.html" class="button">閲讀更多</a></li>
+												<li><a href="#" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
@@ -130,7 +130,7 @@
 									</header>
 									<p>待辦事項</p>
 									<ul class="actions">
-										<li><a href="QuantumbeginnerFirst.html" class="button next">了解更多</a></li>
+										<li><a href="#" class="button next">了解更多</a></li>
 									</ul>
 								</div>
 							</section>
