--- a/news.html
+++ b/news.html
@@ -30,8 +30,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">首頁</a></li>
-							<li><a href="QuantumBeginnerFirst.html">第一篇</a></li>
-							<li><a href="QuantumBeginnerFirst.html">未來規劃</a></li>
+							<li><a href="#">第一篇</a></li>
+							<li><a href="#">未來規劃</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="introduction.html" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
@@ -72,7 +72,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="QuantumBeginnerFirst.html" class="image">
+									<a href="#" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -82,13 +82,13 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumBeginnerFirst.html" class="button">閲讀更多</a></li>
+												<li><a href="#" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="QuantumBeginnerFirst.html" class="image">
+									<a href="#" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -98,13 +98,13 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumBeginnerFirst.html" class="button">閲讀更多</a></li>
+												<li><a href="#" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="QuantumBeginnerFirst.html" class="image">
+									<a href="#" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -114,7 +114,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="QuantumBeginnerFirst.html" class="button">閲讀更多</a></li>
+												<li><a href="#" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
@@ -129,7 +129,7 @@
 									</header>
 									<p>待辦事項</p>
 									<ul class="actions">
-										<li><a href="QuantumBeginnerFirst.html" class="button next">了解更多</a></li>
+										<li><a href="#" class="button next">了解更多</a></li>
 									</ul>
 								</div>
 							</section>
