--- a/beginners.html
+++ b/beginners.html
@@ -75,7 +75,7 @@
 									<a href="beginners/First.html" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
-									<div class="content">
+									<div class="content" style="background-color: #8d82c4ef;">
 										<div class="inner">
 											<header class="major">
 												<h4 style="font-size: 0.9em;">【初學量子1】量子有這麽難?</h4>
@@ -92,7 +92,7 @@
 									<a href="#" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
-									<div class="content">
+									<div class="content" style="background-color: #8d82c4;">
 										<div class="inner">
 											<header class="major">
 												<h3>Rhoncus magna</h3>
@@ -108,7 +108,7 @@
 									<a href="#" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
-									<div class="content">
+									<div class="content" style="background-color: #8d82c4ef;">
 										<div class="inner">
 											<header class="major">
 												<h3>Sed nunc ligula</h3>
