--- a/activity.html
+++ b/activity.html
@@ -75,7 +75,7 @@
 									<a href="#" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
-									<div class="content">
+									<div class="content" style="background-color: #87c5a4de;">
 										<div class="inner">
 											<header class="major">
 												<h3>Orci maecenas</h3>
@@ -91,7 +91,7 @@
 									<a href="#" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
-									<div class="content">
+									<div class="content" style="background-color: #87c5a4;">
 										<div class="inner">
 											<header class="major">
 												<h3>Rhoncus magna</h3>
@@ -107,7 +107,7 @@
 									<a href="#" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
-									<div class="content">
+									<div class="content" style="background-color: #87c5a4de;">
 										<div class="inner">
 											<header class="major">
 												<h3>Sed nunc ligula</h3>
